# github-icons

./: .gitignore  .prettierrc  .stackblitzrc  Cargo.toml  Makefile.toml  README.md  TODO.md  package.json  tsconfig.json  wrangler.toml
.github/workflows/: deploy.yml
api/: .gitignore  Cargo.toml  README.md  wrangler.toml
api/src/: init.js  lib.rs  mixpanel.rs  npm.rs  npm_github.rs  serialized_response.rs  transform_response.rs
api/worker/: metadata_wasm.json  worker.js
chrome-extension/: package.json  webpack.config.ts
chrome-extension/public/: manifest.json  options.html
chrome-extension/src/content_script/: homepage.ts  index.ts  repository.ts  search.ts
chrome-extension/src/utils/: image.ts  onElement.ts
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs  modify_gitignore.rs
cli/src/commands/: sync.rs  write.rs
cli/src/database/: mod.rs  schema.rs
extension/: package.json  tsconfig.json  webpack.config.ts
extension/src/: options.tsx
extension/src/content_script/: homepage.ts  index.ts  notifications.ts  organization.ts  profile.ts  recent_repositories.ts  repository.ts  search.ts
extension/src/utils/: index.ts  onURLUpdate.ts  updateImage.ts
git-icons/: Cargo.toml  README.md  icons.sh  repo.sh  test.db
git-icons-cli/: .rustfmt.toml
git-icons/migrations/20170124012402_setup/: up.sql
git-icons/src/: lib.rs  main.rs  models.rs
git-icons/src/database/: mod.rs  schema.rs
migrations/20170124012402_setup/: up.sql
repo_icons/: Cargo.toml  README.md
repo_icons/api/: .gitignore  Makefile.toml  wrangler.toml
repo_icons/api/src/: lib.rs
repo_icons/src/: blacklist.rs  lib.rs  macros.rs  repo_icon.rs  repo_icons.rs
repo_icons/src/github_api/: mod.rs  repo_redirect.rs  user_repos.rs
repo_icons/src/github_api/blob/: mod.rs  repo_files.rs
repo_icons/src/github_api/readme/: mod.rs  primary_heading.rs  readme_image.rs  repo_redirect.rs
repo_icons/src/github_api/repo/: mod.rs  repo.rs  repo_redirect.rs
repo_icons/src/github_api/repo_icon_files/: mod.rs  repo_files.rs
src/: App.tsx  blacklist.rs  index.html  lib.rs  macros.rs  main.rs  mod.rs  modify_gitignore.rs  renderer.ts  repo_icon.rs  repo_icons.rs  user_repos.rs
src/commands/: mod.rs  set.rs  sync.rs  write.rs
src/database/: mod.rs  schema.rs
src/github_api/blob/: mod.rs
src/github_api/readme/: mod.rs  readme_image.rs
src/readme/: badges.rs  mod.rs  primary_heading.rs  readme_image.rs  repo_redirect.rs
website/: .babelrc  .env.local.example  demo-repos.json  demo.json  next-auth.d.ts  next.config.js  package.json  relay.config.js  tsconfig.json
website/components/: BackgroundEffect.tsx  Repo.tsx  RepoButton.tsx  UserRepos.tsx
website/hooks/: useOctokit.tsx
website/pages/: _app.tsx  index.tsx
website/pages/[owner]/: [repo].tsx
website/pages/api/auth/: [...nextauth].ts
website/src/: demoIcons.ts
website/src/components/: BackgroundEffect.tsx  IconButton.tsx  Repo.tsx  RepoButton.tsx  Search.tsx  UserOrgs.tsx  UserRepos.tsx
website/src/components/AllIcons/: AllIcons.tsx  Icon.tsx
website/src/components/IconButton/: IconButton.tsx  IconButtonBadge.tsx
website/src/components/IconsGrid/: Icon.tsx  IconsGrid.tsx
website/src/components/IconsQuery/: Icon.tsx  IconsQuery.tsx  search.ts
website/src/components/Repo/: Icon.tsx  Repo.tsx
website/src/components/Search/: Input.tsx  Option.tsx  Search.tsx
website/src/lib/: clientEnvironment.ts  popularPackages.ts  useQuery.ts  useUrl.ts
website/src/pages/: _app.tsx  _document.tsx  index.tsx  popular-packages.tsx  sitemap.xml.tsx
website/src/pages/[owner]/: [repo].tsx
website/src/pages/[user]/: [repo].tsx  index.tsx
website/src/pages/api/: npm-search.ts
website/src/pages/api/auth/: [...nextauth].ts
website/src/pages/npm/: [...pkg].tsx
website/src/queries/__generated__/: UserOrgs_orgsQuery.graphql.ts  UserRepos_pinnedReposQuery.graphql.ts
website/src/styles/: globals.css
