[workspace]
members = ["api"]

[package]
name = "repo_icons"
version = "0.1.11"
authors = ["Sam Denty <sam@samdenty.com>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/samdenty/repo_icons"
repository = "https://github.com/samdenty/repo_icons"
documentation = "https://docs.rs/repo_icons"
description = "Get icons for any github repo"
keywords = ["favicon", "logo", "website", "scraper", "cli"]
categories = ["command-line-utilities", "multimedia::images", "wasm"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]
# default = ["image"]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.1.1", features = ["full"] }
env_logger = "0.9.0"

[dependencies]
clap = { version = "3.1.7", features = ["derive"] }
derivative = "2.2.0"
serde_with = "1.6.2"
pin-utils = "0.1.0"
gh_api = "0.1.0"
data-url = "0.1.0"
bytes = "1.0.1"
vec1 = { version = "1.6.0", features = ["serde"] }
html5ever = "0.26.0"
url = { version = "2.2.0", features = ["serde"] }
regex = "1"
cached = "0.34.0"
log = "0.4.14"
once_cell = "1.5.2"
site_icons = "0.1.10"
scraper = "0.12.0"
tokio-futures-byteorder = { version = "0.2.0", features = ["futures"] }
byteorder = "1.4.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
reqwest = { package = "reqwest-wasm", version = "0.11.0", features = [
  "json",
  "cookies",
  "blocking",
  "stream",
] }
futures = "0.3.12"
image = { version = "0.24.1", optional = true }
