[package]
name = "api"
version = "0.1.0"
authors = ["Sam Denty <sam@samdenty.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.0.11"
console_error_panic_hook = "0.1.1"
serde_json = "1.0"
serde = "1.0"
futures = "0.3.12"
repo_icons = { path = "../repo_icons" }
regex = "1.7.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
