[package]
name = "github-icons"
version = "1.0.6"
edition = "2021"
license = "GPL-3.0"
description = "Mac CLI that adds folder icons to your local repos"

[dependencies]
clap = { version = "3.1.7", features = ["derive"] }
repo_icons = "0.3.1"
env_logger = "0.9.0"
log = "0.4.14"
once_cell = "1.5.2"
gh_api = "0.3.0"
tokio = { version = "1.1.1", features = ["full"] }
regex = "1"
parking_lot = "0.12.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
lru = "0.8.11"
thread_local = "1.1.0"
rand = "0.8.5"
shellexpand = "2.1.0"
image = "0.24.1"
usvg = "0.22.0"
resvg = "0.25.0"
tiny-skia = "0.6.3"
home = "0.5.3"
futures = "0.3.21"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
url = "2.2.2"
reqwest = { version = "0.11.10", features = [
  "json",
  "cookies",
  "blocking",
  "stream",
] }
base64 = "0.13.0"
urlencoding = "2.1.0"
site_icons = "0.3.8"
