[package]
name = "git-icons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.7", features = ["derive"] }
repo_icons = "0.1.5"
env_logger = "0.9.0"
log = "0.4.14"
once_cell = "1.5.2"
tokio = { version = "1.1.1", features = ["full"] }
regex = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
lru = "0.7.3"
thread_local = "1.1.0"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
url = "2.2.2"
reqwest = { version = "0.11.10", features = [
  "json",
  "cookies",
  "blocking",
  "stream",
] }
